--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,9 @@ default: &default
 development:
   <<: *default
   database: fitness_development
+  host: db
+  password: <%= ENV["DB_PASSWORD"] %>
+  user: <%= ENV["DB_USERNAME"] %>
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -57,6 +60,9 @@ development:
 test:
   <<: *default
   database: fitness_test
+  host: db
+  password: <%= ENV["DB_PASSWORD"] %>
+  user: <%= ENV["DB_USERNAME"] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
