Update fixture files and tests for entries and workouts
- Rename entry fixtures for consistency from 'entry_one' and 'entry_two' to 'one' and 'two'.
- Add new fixture for plan enrollments to support user and plan associations.
- Enhance workouts fixture with an 'inactive' status for workouts linked to plan enrollments.
- Update entry tests to reflect the new fixture naming convention.
- Add tests for active and past workouts in the User model.

--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -18,7 +18,7 @@ not_completed:
   order: 1
   completed_at: nil
 
-entry_one:
+one:
   reps: 1
   sets: 1
   plan: one
@@ -27,7 +27,7 @@ entry_one:
   order: 1
   completed_at: nil
 
-entry_two:
+two:
   reps: 1
   sets: 1
   day: 1
