--- a/test/fixtures/workouts.yml
+++ b/test/fixtures/workouts.yml
@@ -11,3 +11,9 @@ two:
   day: 1
   status: 1
   completed_at: 2025-11-05 00:14:06
+
+inactive:
+  plan_enrollment: inactive
+  day: 1
+  status: 1
+  completed_at: 2025-11-05 00:14:06
